# generic-webplayer

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  config.h.in  configure  main.cpp  player.cpp  player.h  player.ui  playerwebdialog.cpp  playerwebdialog.h
src/: CMakeLists.txt  Makefile  main.cpp  player.cpp  player.desktop  player.h  player.icon  player.pro  player.ui  playerwebdialog.cpp  playerwebdialog.h  playerwebdialog.ui  resources.qrc
